Fix stacking of footer content on small viewports

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -578,9 +578,10 @@
   }
 
   /* Stack footer links */
+  [role="contentinfo"] .landmark-content,
   .social,
   .subscribe {
-    float: none;
+    display: block;
   }
 
   .subscribe {
